--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </div>         
             </div>
     </header>
+    <div class="footerstyle"></div>
     <!--Actualité-->
     <section>
         <h1 class="titreblocressource">POUR VOUS, NOTRE RESSOURCE HUMAINE</h1>
@@ -181,16 +182,19 @@
         </div>
     </section>
     <!--Pied de Page-->
+    <div class="footerstyle"></div>
     <footer class="reveal allfooter">
         <div class="reveal-2 footer">
             <div class="logoreseau">
                 <a href=""><div class="reveal-2 logofb"><i class="fab fa-facebook-square"></i></div></a>
+                <a href=""><div class="reveal-2 logophone"><i class="fas fa-phone-square"></i></div></a>
+                <a href=""><div class="reveal-2 logomessenger"><i class="fab fa-facebook-messenger"></i></div></a>
                 <a href="mailto:benjicolle@gmail.com"><div class="reveal-2 logomail"><i class="far fa-envelope"></i></div></a>
             </div>
         </div>
         <div class="copyright">
             <p class="copy">COPYRIGHT</p>
-            <i class="far fa-copyright"></i>
+            <div class="logoc"><i class="far fa-copyright"></i></div>
         </div>
     </footer>
     <script src="assets/js/jquery.js"></script>
